--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "vuejs-logger",
+  "name": "vuejs3-logger",
   "license": "MIT",
-  "author": "Justin Kames",
-  "description": "vuejs-logger, provides customizable logging functionality for Vue.js.",
-  "version": "1.5.4",
+  "author": "Marc Schätz",
+  "description": "vuejs3-logger, provides customizable logging functionality for Vue.js3. Forked from the gread vuejs-logger library (https://github.com/justinkames/vuejs-logger)",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/justinkames/vuejs-logger.git"
+    "url": "https://github.com/MarcSchaetz/vuejs3-logger.git"
   },
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc && npm test && mkdir -p ./dist/lib/types && cp src/lib/types/index.d.ts ./dist/lib/types/index.d.ts",
+    "build:save": "tsc && npm test && mkdir -p ./dist/lib/types && cp src/lib/types/index.d.ts ./dist/lib/types/index.d.ts",
+    "build": "tsc && mkdir -p ./dist/lib/types && cp src/lib/types/index.d.ts ./dist/lib/types/index.d.ts",
     "tsc": "tsc --watch",
     "test": "tsc && jest",
     "upload-coverage": "codecov -t $CODECOV_TOKEN",
@@ -19,14 +20,15 @@
   "devDependencies": {
     "@types/jest": "25.1.1",
     "@types/node": "13.5.3",
+    "chai": "4.2.0",
+    "codecov": "3.6.2",
+    "eslint": "^7.12.1",
     "jest": "25.1.0",
     "ts-jest": "25.1.0",
-    "typescript": "3.7.5",
-    "chai": "4.2.0",
-    "codecov": "3.6.2"
+    "typescript": "3.7.5"
   },
   "dependencies": {
-    "vue": "2.6.11",
+    "vue": "^3.0.0",
     "es6-object-assign": "1.1.0"
   },
   "typings": "dist/lib/types/index.d.ts"
