fix: getMethodName error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
         ],
         "quotes": [
             "warn",
-            "single",
+            "double",
             { "allowTemplateLiterals": true }
         ]
     }
